@@ -208,3 +208,6 @@
 	enable 'Automatically connect' for the network interface.
 2018-10-30 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.9.0rd3alpha01.
+2018-11-02 Fred Gleason <fredg@paravelsystems.com>
+	* Modified the RHEL7 installer to initialize the automounter
+	for all install types.
